--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor=green>
+<body bgcolor=blue>
 <center>
 <h2><font color=red>Hello from Hrevtseva Tatiana</font></h2>
 <font color=blue>www.adv-it.net</font>
